Update footer text to Powered by Groq

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </main>
 
         <footer>
-            <p>Powered by OpenAI API</p>
+            <p>Powered by Groq</p>
         </footer>
     </div>
 
